--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 .container {
-    width: 1024px;
+    max-width: 1024px;
 }
 
 .header-block {
@@ -32,4 +32,5 @@ body {
 
 .content-block {
     outline: 2px solid orange;
+    margin-bottom: 30px;
 }
